--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,14 @@
                 <a routerLink="{{menuItem.link}}" routerLinkActive="active" #rla="routerLinkActive">
                   <!-- <img src="{{rla.isActive ? menuItem.iconAtv : menuItem.icon}}" alt="{{menuItem.name}}" /> -->
                   <img src="{{menuItem.icon}}" alt="{{menuItem.name}}" />
-                  <p class="text-center f-12">{{menuItem.name}}</p>
+                  <span class="text-center f-12">{{menuItem.name}}</span>
                 </a>
               </div>
-              
+
               <div class="menuItem mb-3">
                 <a (click)="logout()">
                   <img src="assets/img/logout-light.svg" alt="logout img" />
-                  <p class="text-center f-12">Logout</p>
+                  <span class="text-center f-12">Logout</span>
                 </a>
               </div>
 
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    
+
   </div>
 </div>
 
