--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,7 +52,7 @@ $bg-color: #000000;
 }
 .left-nav{
   position: fixed;
-  width: 7%;
+  width: 10%;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: $bg-color;
@@ -61,7 +61,12 @@ $bg-color: #000000;
     img {
       opacity: 0.6;
       width: 25%;
-      display: block; margin: auto;
+      display: block;
+    }
+    span{
+      float: left;
+      margin-left:45px;
+      margin-top: -17px;
     }
     p {opacity: 0.6;}
     a {
@@ -82,6 +87,7 @@ $bg-color: #000000;
   // }
 }
 
+
 .menuItem .active:parent{
   box-shadow: none;
 }
@@ -94,3 +100,8 @@ p{padding: 0 !important;}
   width: 30%;
 }
 .h-98{height: 98%;}
+
+
+.menuItem{
+  margin-bottom:20px;
+}
